--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "gulp watch",
     "build": "gulp build",
+    "test": "gulp test",
     "lint": "eslint components"
   },
   "author": "Wesley Ameling <engineercoding@gmail.com>",
